# Perpetua

./: .gitignore  .pylintrc  .release-please-config.json  .release-please-manifest.json  CHANGELOG.md  ClientManager.py  LICENSE  Makefile  PROTOCOL_CONFIG.md  README.md  ServerManager.py  benchmark_simple.py  build.py  build.sh  gui.py  launcher.py  main.py  main2.py  package-lock.json  pyproject.toml  requirements.txt  scripts.py  start.py  test_chunk_manager.py  test_comprehensive_data_flow.py  test_file_transfer.py  test_new_chunking.py  test_protocol.py
.github/: .release-please-manifest.json
.github/workflows/: build.yml  dev_build.yml  dev_build_win64.yml  pre-release.yml  release.yml  tests.yml  warm-cache.yml
.tests/: linux_input.py  linux_mouse.py
OLD/app/: ProcessMonitor.py
OLD/client/: ClientBuilder.py  __init__.py
OLD/config/: ServerConfig.py  __init__.py
OLD/inputUtils/: HandlerFactory.py  OSXInputHandler.py  WinInputHandler.py
OLD/network/: ServerSocket.py
OLD/server/: __init__.py
OLD/utils/: Events.py  Interfaces.py
OLD/window/: InterfaceWindow.py  OSXWindow.py
app/: ProcessMonitor.py
app/io/: IOManager.py
app/managers/: ServerManager.py
client/: Client.py  ClientBuilder.py  ClientState.py  Command.py  ServerHandler.py  __init__.py
client/command/: ClipboardCommand.py  CommandProcessor.py  KeyboardCommand.py  MouseCommand.py  __init__.py
client/connections/: ConnectionService.py  ServerHandler.py
client/input/: InputService.py
command/: __init__.py
config/: AppConfigHandler.py  ClientConfig.py  ServerConfig.py  __init__.py  configConstants.py
event/: Event.py  EventBus.py  __init__.py  bus.py
gui/: GUIController.py
input/: __init__.py
input/clipboard/: __init__.py  _base.py  _darwin.py  _win.py
input/cursor/: __init__.py  _base.py  _darwin.py  _win.py
input/keyboard/: __init__.py  _base.py  _darwin.py  _win.py
input/mouse/: __init__.py  _base.py  _darwin.py  _win.py
inputUtils/: FileTransferEventHandler.py  FileTransferService.py  HandlerInterface.py  OSXInputHandler.py  WinInputHandler.py  __init__.py
logo/: logo.icns
model/: ClientObj.py  client.py
network/: ClientSocket.py  IOManager.py  ServerSocket.py  __init__.py  blSocket.py  iSocket.py  webSocket.py
network/connection/: AsyncClientConnection.py  AsyncClientConnectionService.py  AsyncServerConnectionService.py  ClientConnectionService.py  ClientSocket.py  GeneralSocket.py  ServerConnectionServices.py  ServerSocket.py  __init__.py  client.py  handler.py  server.py
network/data/: MessageExchange.py  __init__.py  exchange.py
network/exceptions/: NetExceptions.py
network/protocol/: __init__.py  message.py  ordering.py
network/stream/: ClientCustomStream.py  CustomStream.py  GenericStream.py  ServerCustomStream.py  StreamObj.py  __init__.py  client.py  server.py
requirements/Osx/: _old.txt  requirements.txt
requirements/Win/: requirements.txt
requirements/darwin/: requirements.txt
requirements/win/: requirements.txt
scripts/: analyze_deps.sh  enable_uinput.sh  make_appimage.sh  make_deb.sh  make_rpm.sh  verify_packages.sh
scripts/aur/: PKGBUILD
scripts/systemd/: perpetua-daemon.service
server/: ClientHandler.py  Command.py  LinuxServer.py  ScreenReset.py  ScreenState.py  ScreenTransition.py  Server.py  Server2.py  ServerBuilder.py  __init__.py
server/command/: ClipboardCommand.py  DisconnectCommand.py  ReturnCommand.py  __init__.py
server/connections/: ClientHandler.py  ConnectionService.py
server/input/: InputService.py
server/screen/: ScreenTransition.py
service/: __init__.py  client.py  daemon.py  server.py
src/: daemon.py  launcher.py
src-gui/: index.html  package-lock.json  package.json
src-gui/src/: App.css  main.tsx  vite-env.d.ts
src-gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json
src-gui/src-tauri/capabilities/: default.json
src-gui/src-tauri/icons/: icon.icns
src-gui/src-tauri/icons/macos/: icon.icns
src-gui/src-tauri/ipc/: Cargo.toml
src-gui/src-tauri/ipc/src/: connection.rs  event.rs  lib.rs  log_reader.rs  paths.rs
src-gui/src-tauri/src/: commands.rs  handler.rs  lib.rs  main.rs  process.rs
src/command/: __init__.py
src/config/: __init__.py
src/event/: __init__.py  bus.py  notification.py
src/input/: __init__.py  _platform.py
src/model/: client.py  connection.py  monitor.py
src/network/: __init__.py
src/service/: __init__.py  client.py  daemon.py  server.py
src/utils/: __init__.py  fs.py  override.py  runtime.py
test/: __init__.py  async_server.py  benchmark_stream_handlers.py  example_async_usage.py  run_all_tests.py  standalone_manual_test.py  standalone_test_client.py  test_BidirectionalStreamHandler.py  test_ClientConnectionService.py  test_ClientMouseController.py  test_ClientMouseController_terminal.py  test_MouseCaptureWindowMultiprocess.py  test_MouseStreamHandler.py  test_ServerConnectionServices.py  test_ServerMouseListener.py  test_ServerMouseListener_terminal.py  test_UnidirStreamHandler.py  test_async_client.py  test_async_eventbus.py  test_async_message_exchange.py  test_async_server.py  test_cert_sharing.py  test_chunk_manager.py  test_clipboard_hash.py  test_clipboard_listener.py  test_clipboard_reconstruction.py  test_command_system.py  test_cursorhandler.py  test_data_object_abstraction.py  test_data_object_integration.py  test_integration.py  test_integration_simple.py  test_msg_exchange.py  test_new_chunking.py  test_performance.py  test_protocol.py  test_warp.py  test_warp_multiprocess.py
test/active/: Client.py  ClientAdvanced.py  Server.py  ServerAdvanced.py
tests/active/: Client.py  ClientAdvanced.py  Server.py  ServerAdvanced.py  active_test_cursorhandler.py  daemon_client.py  test_cursorhandler.py
tests/unit/: conftest.py  test_cert_sharing.py  test_config.py  (+5 more)
utils/: Interfaces.py  Logging.py  OSXaccessibilty.py  Win32Utils.py  WinNet.py  __init__.py  configConstants.py  net.py  netConstants.py  netData.py  override.py  screen.py
window/: InterfaceWindow.py  OSXWindow.py  WinWindow.py  __init__.py  test.py
(+256 files in other folders)
