[project]
name = "pycontinuity-master"
version = "0.1.0"
description = ""
authors = [
    {name = "fizzi01",email = "federico.izzi@studenti.unisalento.it"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "keyboard (>=0.13.5)",
    "packaging (>=24.2)",
    "pynput (>=1.7.7)",
    "pyobjc (>=10.2) ; sys_platform == 'darwin'",
    "pywin32 (>=308,<400.0.0) ; sys_platform == 'win32'",
    "comtypes (>=1.4.8,<2.0.0) ; sys_platform == 'win32'",
    "screeninfo (>=0.8.1)",
    "zeroconf (>=0.136.2)",
    "wxpython (>=4.2.2)",
    "netifaces (>=0.11.0)",
    "attrs (>=25.4.0,<26.0.0)",
    "copykitten (>=2.0.0)",
    "cryptography (>=46.0.3)",
    "pyjwt (>=2.10.1)",
    "aiofiles (>=25.1.0)",
    "nuitka (>=2.8.9,<3.0.0)"

]

[tool.poetry]
name = "pycontinuity-master"
packages = [
    { include = "command" },
    { include ="config" },
    { include ="event" },
    { include ="input" },
    { include ="model" },
    { include ="network" },
    { include ="service" },
    { include ="utils" }
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
