[package]
name = "perpetua"
version = "1.0.0"
description = "Cross-platform Mouse, keyboard, and clipboard sharing"
authors = ["fizzi01"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "perpetua_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-ico", "image-png" ]  }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ipc = {path = "ipc"}
tauri-plugin-dialog = "2"
tauri-plugin-os = "2.3.2"
tauri-plugin-prevent-default = "4"
ctrlc = { version = "3", features = ["termination"] }
clap = { version = "4", features = ["derive"] }
local-ip-address = "0.6.10"

[workspace]
members = [
    "ipc"
]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
libc = "0.2.182"
