[package]
name = "ipc"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.0"
futures = "0.3.31"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["net", "io-util", "time", "macros","rt-multi-thread"] }
tokio-stream = { version = "0.1.18", features = ["io-util"] }
tokio-util = {version = "0.7.18", features = ["codec"]}
