[package]
name = "ipc"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.0"
futures = "0.3.31"
log = "0.4.29"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
serde_variant = "0.1.3"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["net", "io-util", "time", "macros","rt-multi-thread"] }
tokio-stream = { version = "0.1.18", features = ["io-util"] }
tokio-util = {version = "0.7.18", features = ["codec"]}
dirs = "6.0.0"

[dev-dependencies]
tempfile = "3.24.0"